processor/src/fast/tests/snapshots/miden_processor__fast__tests__masm_consistency__fast::tests::masm_consistency::test_masm_errors_consistency::case_5.snap
---
source: processor/src/fast/tests/masm_consistency.rs
assertion_line: 353
expression: fast_err
---
OperationError {
    label: SourceSpan {
        source_id: SourceId(
            4294967295,
        ),
        start: ByteIndex(
            0,
        ),
        end: ByteIndex(
            0,
        ),
    },
    source_file: None,
    err: DivideByZero,
}
